syntax = "proto3";

option csharp_namespace = "FallSignsClient";

package fallZodiacSigns;

service FallZodiacSigns {
	rpc FindZodiacSign (FallZodiacRequest) returns (FallZodiacResponse);
}

message FallZodiacRequest {
	string birthDate = 1;
}

message FallZodiacResponse {
	ZodiacSign sign = 1;
}

message ZodiacSign {
	string name = 1;
	int32 startDay = 2;
	int32 startMonth = 3;
	int32 endDay = 4;
	int32 endMonth = 5;

}